src/objects/CBL2_Farmer__c.object
<CustomObject>
    <fields>
        <fullName>socioe_homeOwnerShip__c</fullName>
        <label>socioe_homeOwnerShip</label>
        <picklist>
            <picklistValues>
                <fullName>Propia, totalmente pagada y escritura</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Propia, parcialmente pagada y escritura</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Propia sin escritura</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>En arriendo, subarriendo / alquiler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>En usufructo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ocupante</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Propiedad comunal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Derecho heredado o intestado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otras formas</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>socioe_horsesMulesDonkeys__c</fullName>
        <label>socioe_horsesMulesDonkeys</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>socioe_householdIncomeSources__c</fullName>
        <label>socioe_householdIncomeSources</label>
        <picklist>
            <picklistValues>
                <fullName>Agricultura</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trabajo agrícola (jornalero agrícola)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trabajo no agrícola temporal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trabajo no agrícola permanente</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negocio propio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remesas y giros de familiares</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subsidios del gobierno</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otros</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>socioe_knowsHowToReadWrite__c</fullName>
        <label>socioe_knowsHowToReadWrite</label>
        <picklist>
            <picklistValues>
                <fullName>Si</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>socioe_landLine__c</fullName>
        <label>socioe_landLine</label>
        <picklist>
            <picklistValues>
                <fullName>Si</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>socioe_lastYearIncomeReduction__c</fullName>
        <label>socioe_lastYearIncomeReduction</label>
        <picklist>
            <picklistValues>
                <fullName>Ninguno</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plagas y enfermedades agrícolas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eventos naturales (sequías, etc)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cambios fuertes en precios y costos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Muerte, enfermedad o lesión de familiar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delitos o robos graves a sus bienes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conflictos civiles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otro</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>socioe_numberOfBedrooms__c</fullName>
        <label>socioe_numberOfBedrooms</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>socioe_otherActivities__c</fullName>
        <label>socioe_otherActivities</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>socioe_otherAgriculturalActivities__c</fullName>
        <label>socioe_otherAgriculturalActivities</label>
        <picklist>
            <picklistValues>
                <fullName>Caballos, mulas, burros</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toros, vacas, terneros</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cerdos, ovejas, cabras, alpacas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aves, conejos, cuyes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apicultura</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Piscicultura</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cacao</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cardamomo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banano/plátano</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aguacate/palta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hortalizas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Frutales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Granos básicos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caña de azúcar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leña, madera, subproductos del bosque</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pastos y forrajes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otros</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ninguna de las anteriores</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>socioe_pepperAreaUnits__c</fullName>
        <label>socioe_pepperAreaUnits</label>
        <picklist>
            <picklistValues>
                <fullName>Hectáreas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuerdas de 25x25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuerdas de 40x40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manzanas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuadras</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>socioe_pepperArea__c</fullName>
        <label>socioe_pepperArea</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>socioe_percentageOfIncomeAgriculture__c</fullName>
        <label>socioe_percentageOfIncomeAgriculture</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>socioe_percentageOfIncomeCoffee__c</fullName>
        <label>socioe_percentageOfIncomeCoffee</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>socioe_personsInHousehold__c</fullName>
        <label>socioe_personsInHousehold</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>socioe_pigsSheepsGoatsAlpacas__c</fullName>
        <label>socioe_pigsSheepsGoatsAlpacas</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>socioe_pondSquareMeters__c</fullName>
        <label>socioe_pondSquareMeters</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>socioe_populationGroup__c</fullName>
        <label>socioe_populationGroup</label>
        <picklist>
            <picklistValues>
                <fullName>Mujer cabeza de hogar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Afrodescendiente</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indígena</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recibe subsidios gubernamentales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adulto mayor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Persona con discapacidad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desplazado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desmovilizado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ninguno</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>socioe_savingsWay__c</fullName>
        <label>socioe_savingsWay</label>
        <picklist>
            <picklistValues>
                <fullName>No ahorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comprando animales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comprando terrenos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>En banco, cooperativa o asociación</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grupos comunales de autoayuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otra forma</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>socioe_schoolingYears__c</fullName>
        <label>socioe_schoolingYears</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>socioe_sewageDisposalSystem__c</fullName>
        <label>socioe_sewageDisposalSystem</label>
        <picklist>
            <picklistValues>
                <fullName>Red de drenaje / alcantarillado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pozo séptico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Letrina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otros tipos</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>socioe_socialSecutiryProgram__c</fullName>
        <label>socioe_socialSecutiryProgram</label>
        <picklist>
            <picklistValues>
                <fullName>Salud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pensiones/jubilación</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Riesgos laborales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seguro de desempleo/Cesantías</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ninguno</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>socioe_sourceOfEnergyCook__c</fullName>
        <label>socioe_sourceOfEnergyCook</label>
        <picklist>
            <picklistValues>
                <fullName>Gas en cilindro, pipeta o de red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energía eléctrica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leña, madera, carbón</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Petróleo, gasolina, kerosene o alcohol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otros materiales o deshechos</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>socioe_sugarCainAreaUnits__c</fullName>
        <label>socioe_sugarCainAreaUnits</label>
        <picklist>
            <picklistValues>
                <fullName>Hectáreas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuerdas de 25x25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuerdas de 40x40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manzanas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuadras</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>socioe_sugarCainArea__c</fullName>
        <label>socioe_sugarCainArea</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>socioe_typeOfStove__c</fullName>
        <label>socioe_typeOfStove</label>
        <picklist>
            <picklistValues>
                <fullName>Fogón de leña sin chimenea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fogón de leña con chimenea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fogón de leña mejorado/ahorrador</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>socioe_vegetablesAreaUnits__c</fullName>
        <label>socioe_vegetablesAreaUnits</label>
        <picklist>
            <picklistValues>
                <fullName>Hectáreas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuerdas de 25x25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuerdas de 40x40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manzanas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuadras</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>socioe_vegetablesArea__c</fullName>
        <label>socioe_vegetablesArea</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>socioe_waterSupply__c</fullName>
        <label>socioe_waterSupply</label>
        <picklist>
            <picklistValues>
                <fullName>Agua domiciliar potable (tratada)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agua domiciliar no potable-no tratada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abastecimiento propio de agua</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otros tipos</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>socioe_whoDoesntStudy__c</fullName>
        <label>socioe_whoDoesntStudy</label>
        <picklist>
            <picklistValues>
                <fullName>Los varones y las mujeres no asisten</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solo los varones no asisten</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solo las mujeres no asisten</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quienes deberían cursar bachillerato no</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>socioe_whoRecievesIncomeAndDecides__c</fullName>
        <label>socioe_whoRecievesIncomeAndDecides</label>
        <picklist>
            <picklistValues>
                <fullName>Hombre recibe ingresos y toma decisiones</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mujer recibe ingresos y toma decisiones</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hombre: ingresos y Mujer: decisiones</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mujer: ingresos y hombre: decisiones</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>socioe_woodStoveLocation__c</fullName>
        <label>socioe_woodStoveLocation</label>
        <picklist>
            <picklistValues>
                <fullName>Cocina independiente a las habitaciones</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>En las habitaciones o dormitorios</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>totalCoffeePlantedArea__c</fullName>
        <label>totalCoffeePlantedArea</label>
        <summarizedField>CBL2_Farm__c.Coffee_planted_area_Ha__c</summarizedField>
        <summaryForeignKey>CBL2_Farm__c.CBL2_Farms_Farmer__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>totalFarmArea__c</fullName>
        <label>totalFarmArea</label>
        <summarizedField>CBL2_Farm__c.Farm_area_Ha__c</summarizedField>
        <summaryForeignKey>CBL2_Farm__c.CBL2_Farms_Farmer__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>totalProductionLastYear__c</fullName>
        <label>totalProductionLastYear</label>
        <summarizedField>CBL2_Farm__c.Production_last_year_Kg__c</summarizedField>
        <summaryForeignKey>CBL2_Farm__c.CBL2_Farms_Farmer__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>CBL2_Farmer</label>
    <nameField>
        <displayFormat>BL-{00000000}</displayFormat>
        <label>CBL_CoffeeBaselineId</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CBL2_Farmers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>